--- a/Practica_Google_Bilal/Index.html
+++ b/Practica_Google_Bilal/Index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Practica_Google_Bilal</title>
     <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
-        <div class="G"> 
-            <p>Gmail</p>
-        </div>
 
-        <div class="I"> 
-            <p>Imatges</p>
+<body>   
+    <header class="Posicio"> 
+        <div> 
+        <a href="" class="Gmail"> Gmail </a>
+        <a href="" class="Imatges"> Imatges </a>
+        <img src="file:///C:/Users/Usuario/Downloads/bars.png"/>
+        <button style="background-color:#136FF3; color: white" class="Boton" > Inicia la sessió </button>
         </div>
+    </header>
 
-        <div> <img src="file:///C:/Users/Usuario/Downloads/Puntitos%20google.png" width="15" height="15" /></div>   
+     <img src="file:///C:/Users/Usuario/Downloads/Google_imagen.png" class="Google"/>
+
+     <div class="Botones"> 
+        <button class="Boton1"> Cerca de Google</button>
+        <button> Segur que tinc sort</button>
+        
+     </div>
+
+    <p class="Textito"> Google disponible en: Español Galego Euskara</p>
+
+    <div class="Barra-busqueda">
+		<div>
+			<form class=>
+				<div>
+					<input type="buscar">
+				</div>
+            </form>
+        </div>
 </body>
+
 </html>
