--- a/Practica_Google_Angelo/home.html
+++ b/Practica_Google_Angelo/home.html
@@ -10,7 +10,8 @@
       rel="stylesheet">
 </head>
 <body>
-    
+
+    <!-- Menu superior y boton de inicio de sesion -->
     <nav class="nav-superior">
         <div class="nav-derecha">
             <a href="">Gmail</a>
@@ -20,28 +21,31 @@
         </div>
     </nav>
 
+    <!-- Logo de GOOGLE -->
     <main>
         <div class="imagenGoogle">
             <img class="logo-google" src="/imagenes/logoGoogle.png" >
         </div>
     </main>
+
+    <!--  fotos y descripcion-->
     <div class="fotos">
-        <div class="angelo">
+        <div>
             <figure>
-                <img src="/imagenes/bulldog-1047518_960_720.jpg" width="150" height="180" alt="">
+                <img src="/imagenes/foto-angelo.jpeg" width="180" height="210" alt="foto-angelo">
             </figure>
-            <div>
+            <div class="text">
                 <p><b>Nombre: </b>Angelo</p>
                 <p><b>Apellido: </b>Yachi</p>
                 <p><b>Hobbies: </b>Mirar series</p>
                 <p><b>Que esperas al acabar la FPS? </b>Trabajar</p>
             </div>
         </div>
-        <div class="bilal">
+        <div>
             <figure>
-                <img src="/imagenes/dachshund-1519374_960_720.jpg" width="150" height="180"alt="">
+                <img src="/imagenes/foto-bilal.jpeg" width="180" height="210"alt="foto-bilal">
             </figure>
-            <div>
+            <div class="text">
                 <p><b>Nombre: </b>Bilal</p>
                 <p><b>Apellido: </b>El Moudden</p>
                 <p><b>Hobbies: </b>Futbol</p>
@@ -49,6 +53,8 @@
             </div>
         </div>
     </div>
+
+    <!-- menu inferior de la pagina -->
     <footer class="footer-inferior">
         <div class="pais">
             <a href="">España</a>
@@ -56,7 +62,7 @@
         <div class="inferior">
             <div class="footer-izquierda">
                 <a href="">Información</a>
-                <a href="">Pulicidad</a>
+                <a href="">Publicidad</a>
                 <a href="">Empresa</a>
             </div>
             <div class="footer-derecha">
