--- a/Practica_Google_Bilal/Index.html
+++ b/Practica_Google_Bilal/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Practica_Google_Bilal</title>
+    <title> Practica_Google_Bilal </title>
     <link rel="stylesheet" href="Styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -11,33 +11,59 @@
 </head>
 
 <body>   
-    <header class="Posicio"> 
+    <div class="flex-container"> 
         <div> 
-        <a href="" class="Gmail"> Gmail </a>
-        <a href="" class="Imatges"> Imatges </a>
-        <img src="file:///C:/Users/Usuario/Downloads/bars.png"/>
-        <button style="background-color:#136FF3; color: white" class="Boton" > Inicia la sessió </button>
+            <a href=""class="SobreGoogle">Sobre Google </a>
+            <a href=""class="Botiga"> Botiga </a>
+            <a href=""class="Gmail"> Gmail </a>
+            <a href=""class="Imatges"> Imatges </a>
+            <img class="Puntitos" src="file:///C:/Users/Usuario/Downloads/bars.png"/>
+            <button style="background-color:#136FF3; color: white" class="Boton" > Inicia la sessió </button>
         </div>
-    </header>
+    </div>
 
      <img src="file:///C:/Users/Usuario/Downloads/Google_imagen.png" class="Google"/>
 
-     <div class="Botones"> 
-        <button class="Boton1"> Cerca de Google</button>
-        <button> Segur que tinc sort</button>
-        
-     </div>
-
-    <p class="Textito"> Google disponible en: Español Galego Euskara</p>
-
-    <div class="Barra-busqueda">
-		<div>
-			<form class=>
-				<div>
-					<input type="buscar">
-				</div>
-            </form>
+     <div class ="Centro"> 
+        <div class="Barra-busqueda">
+            <div>
+                <img class="Lupa" src="file:///C:/Users/Usuario/Downloads/lupa_buscador_google.webp"/>
+                <input class="Barra" type="buscar">
+                <img src ="Imagenes google\icono_teclado_google.png"/>
+                <img src ="Imagenes google\google_mic_logo_icon_159335.png"/>
+                <img src ="Imagenes google\CAM.png"/>
+            </div>
         </div>
+
+        <div class="Botones"> 
+            <button class="Boton1"> Cerca de Google </button>
+            <button class="Boton2"> Segur que tinc sort </button>
+            
+        </div>
+
+        <p class="Textito"> Google disponible en: <a href="file:///C:/Users/Usuario/Desktop/Google%20en%20espa%C3%B1ol/Index.html" Class ="Español">Español</a> <a href ="file:///C:/Users/Usuario/Desktop/Google%20en%20gallego/index.html" Class ="Galego"> Galego</a> <a href="file:///C:/Users/Usuario/Desktop/Google%20en%20ingles/index.html" Class ="Ingles"> English </a> </p>
+
+    </div>
+
+    <div> 
+        <p class="España">Espanya</p>
+    </div>
+
+    <div class="Texto-Abajo">
+        <div> 
+            <a>Informació</a>
+            <a>Publicitat</a>
+            <a>Empresa</a>
+            <a>Com funciona la Cerca</a>
+        </div>
+
+        <div> 
+            <a>Privadesa</a>
+            <a>Condicions</a>
+            <a>Configuració</a>
+        </div>
+    </div>
+
 </body>
 
 </html>
