--- a/Practica_Google_Bilal/IndexES.html
+++ b/Practica_Google_Bilal/IndexES.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Practica_Google_Bilal </title>
-    <link rel="stylesheet" href="Styles1.css">  
+    <title> Practica_Google_Bilal_ES </title>
+    <link rel="stylesheet" href="Styles1.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -14,11 +14,11 @@
     <div class="flex-container"> 
         <div> 
             <a href=""class="SobreGoogle">Sobre Google </a>
-            <a href=""class="Botiga"> Botiga </a>
+            <a href=""class="Botiga"> Tienda </a>
             <a href=""class="Gmail"> Gmail </a>
             <a href=""class="Imatges"> Imatges </a>
             <img class="Puntitos" src="/Imagenes google/Puntitos google.png"/>
-            <button style="background-color:#136FF3; color: white" class="Boton" > Inicia la Sessió </button>
+            <button style="background-color:#136FF3; color: white" class="Boton" > Iniciar Session </button>
         </div>
     </div>
 
@@ -31,36 +31,36 @@
                 <input class="Barra" type="buscar">
                 <img src ="/Imagenes google/icono_teclado_google.png"/>
                 <img src ="/Imagenes google/google_mic_logo_icon_159335.png"/>
-                <img src ="/Imagenes google/CAM.png">
+                <img src ="/Imagenes google/CAM.png"/>
             </div>
         </div>
 
         <div class="Botones"> 
-            <button class="Boton1"> <a href="/Practica_Google_Angelo/home.html"> Cerca de Google  </a> </button>
-            <button class="Boton2">Segur que tinc sort </button>
+            <button class="Boton1"> <a href="/Practica_Google_Angelo/home.html">Buscar con Google  </button>
+            <button class="Boton2"> Voy a tener Suerte </button>
             
         </div>
 
-        <p class="Textito"> Google dispoñible en: <a href="IndexES.html"> Español </a><a href="/indexGA.html" Class ="Gallego">Galego</a> <a href ="/indexEN.html" Class ="Ingles"> English </a> </p>
+        <p class="Textito"> Google disponible en: <a href="/Index.html" Class ="Catalan">Catalá</a> <a href ="/indexGA.html" Class ="Galego"> Galego</a> <a href ="/indexEN.html" Class ="Ingles"> English </a> </p>
 
     </div>
 
     <div> 
-        <p class="España">Espanya</p>
+        <p class="España">España</p>
     </div>
 
     <div class="Texto-Abajo">
         <div> 
-            <a>Informació</a>
-            <a>Publicitat</a>
+            <a>Informacion</a>
+            <a>Publicidad</a>
             <a>Empresa</a>
-            <a>Com funciona la Cerca</a>
+            <a>Como funciona la Busqueda</a>
         </div>
 
         <div> 
-            <a>Privadesa</a>
-            <a>Condicions</a>
-            <a>Configuració</a>
+            <a>Privacidad</a>
+            <a>Términos</a>
+            <a>Configuración</a>
         </div>
     </div>
 
