--- a/Practica_Google_Bilal/indexEN.html
+++ b/Practica_Google_Bilal/indexEN.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title> Practica_Google_Bilal </title>
-    <link rel="stylesheet" href="Styles1.css">  
+    <title> Practica_Google_Bilal_EN </title>
+    <link rel="stylesheet" href="Styles1.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -13,12 +13,12 @@
 <body>   
     <div class="flex-container"> 
         <div> 
-            <a href=""class="SobreGoogle">Sobre Google </a>
-            <a href=""class="Botiga"> Botiga </a>
+            <a href=""class="SobreGoogle">About Google </a>
+            <a href=""class="Botiga"> Shop </a>
             <a href=""class="Gmail"> Gmail </a>
-            <a href=""class="Imatges"> Imatges </a>
+            <a href=""class="Imatges"> Images </a>
             <img class="Puntitos" src="/Imagenes google/Puntitos google.png"/>
-            <button style="background-color:#136FF3; color: white" class="Boton" > Inicia la Sessió </button>
+            <button style="background-color:#136FF3; color: white" class="Boton" > Log In </button>
         </div>
     </div>
 
@@ -31,36 +31,36 @@
                 <input class="Barra" type="buscar">
                 <img src ="/Imagenes google/icono_teclado_google.png"/>
                 <img src ="/Imagenes google/google_mic_logo_icon_159335.png"/>
-                <img src ="/Imagenes google/CAM.png">
+                <img src ="/Imagenes google/CAM.png"/>
             </div>
         </div>
 
         <div class="Botones"> 
-            <button class="Boton1"> <a href="/Practica_Google_Angelo/home.html"> Cerca de Google  </a> </button>
-            <button class="Boton2">Segur que tinc sort </button>
+            <button class="Boton1"> <a href="/Practica_Google_Angelo/home.html">Search in Google</button>
+            <button class="Boton2"> I'm gonna get lucky </button>
             
         </div>
 
-        <p class="Textito"> Google dispoñible en: <a href="IndexES.html"> Español </a><a href="/indexGA.html" Class ="Gallego">Galego</a> <a href ="/indexEN.html" Class ="Ingles"> English </a> </p>
+        <p class="Textito"> Google available at: <a href="/IndexES.html" Class ="Español">Español</a> <a href ="/indexGA.html" Class ="Galego"> Galego</a> <a href="/Index.html" Class ="Catalan"> Catalá </a> </p>
 
     </div>
 
     <div> 
-        <p class="España">Espanya</p>
+        <p class="España">Spain</p>
     </div>
 
     <div class="Texto-Abajo">
         <div> 
-            <a>Informació</a>
-            <a>Publicitat</a>
-            <a>Empresa</a>
-            <a>Com funciona la Cerca</a>
+            <a>Information</a>
+            <a>Advertising</a>
+            <a>Business</a>
+            <a>how the search works</a>
         </div>
 
         <div> 
-            <a>Privadesa</a>
-            <a>Condicions</a>
-            <a>Configuració</a>
+            <a>Privacy</a>
+            <a>Terms</a>
+            <a>Settings</a>
         </div>
     </div>
 
